# appium-cli

./: .agent-browser-memory.jsonl  .gitignore  README.md  confirm_firstname  form_deep  form_full_refs  initial_form  pyproject.toml
agent-browser/: .env.example  .gitignore  README.md  pyproject.toml
agent-browser/prompts/: complex.txt  normal.txt  simple.txt  t4c.txt
agent-browser/src/agent_browser/: __init__.py  agents.py  appium_tools.py  config.py  guardrails.py  main.py  memory.py  schemas.py  session.py  skills.py  token_counter.py  trimming_session.py
agent-browser/src/agent_browser/agent/: __init__.py  brain.py  history.py  llm.py  loop.py  prompt.py  registry.py  state.py  verifier.py
agent-browser/src/agent_browser/controller/: __init__.py  controller.py  effects.py  executor.py  llm_assist.py  planner.py  policy.py  recovery.py  scoring.py  task_compiler.py  task_plan.py  verification.py
agent-browser/src/agent_browser/world/: __init__.py  artifacts.py  diff.py  (+2 more)
agent-browser/tests/: conftest.py  test_agents.py  test_appium_tools.py  test_brain.py  test_compat_react_loop.py  test_config.py  test_controller_twine4car.py  test_execution_verification.py  test_guardrails.py  test_history.py  test_llm.py  test_loop.py  test_memory.py  test_planner_scroll.py  test_policy.py  test_prompt.py  test_recovery.py  test_registry.py  test_retry_limit.py  test_schemas.py  test_skills.py  test_success_verification.py  test_task_compiler.py  test_task_plan.py  test_token_counter.py  test_trimming_session.py  test_verifier.py  test_world_diff.py  test_world_model.py
(+101 files in other folders)
