[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "appium-cli"
version = "0.1.0"
description = "CLI for Appium-based mobile automation by LLM agents."
requires-python = ">=3.11"
dependencies = [
    "appium-python-client>=4.0.0",
    "selenium>=4.0.0",
    "typer>=0.12.0",
]

[project.scripts]
appium-cli = "appium_cli.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/appium_cli"]

[tool.hatch.build.targets.wheel.force-include]
"skills" = "appium_cli/skills"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "e2e: tests that require a real Appium/Android environment",
]
