[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-browser"
version = "0.1.0"
description = "Single-agent mobile browser automation built on OpenAI Agents SDK and appium-cli."
requires-python = ">=3.11"
dependencies = [
    "openai-agents>=0.0.10",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "appium-cli",
]

[project.scripts]
agent-browser = "agent_browser.main:cli_main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23",
]

[tool.uv.sources]
appium-cli = { path = "..", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src/agent_browser"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
